# Deep-Research

./: .env  Dockerfile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
Node/: SectionWriting.py
SubNode/: SectionPlanning.py  WriteSection.py  prompts.py
tests/: test_format_sections.py
