[project]
name = "deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.14",
    "ipython>=8.37.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.6",
    "langchain-groq>=0.3.5",
    "langgraph>=0.5.1",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "starlette>=0.46.2",
    "streamlit>=1.46.1",
    "tiktoken>=0.9.0",
    "uvicorn[standard]",
]
